--- a/vector.css
+++ b/vector.css
@@ -11,6 +11,8 @@
     --lea-vect-black: #000;
   }
 
+/* Vector Standard Bootstrap Style Layour */
+
 .lea-vect-row {
     width: 100%;
     display: flex;
@@ -20,20 +22,32 @@
     float: left;
 }
 
-.lea-vect-col-3 {
-    width: 25%;
+.lea-vect-col-1 {
+    width: 8.333333%;
 }
 
 .lea-vect-col-2 {
     width: 16.66666%;
 }
 
+.lea-vect-col-3 {
+    width: 25%;
+}
+
 .lea-vect-col-4 {
-    width: 33.33333%;
+    width: 33.333333%;
+}
+
+.lea-vect-col-5 {
+    width: 41.666666%;
 }
 
 .lea-vect-col-6 {
     width: 50%;
+}
+
+.lea-vect-col-7 {
+    width: 58.333333%;
 }
 
 .lea-vect-col-12 {
@@ -338,6 +352,8 @@
     font-size: 150%;
     padding: 10px;
     border-radius: 5px 0px 0 0;
+    background-color: var(--lea-vect-oxford-blue);
+    color: var(--lea-vect-white);
 }
 
 .lea-vect-head-topics-right {
@@ -468,7 +484,7 @@
     color: #fff;
 }
 
-#lea-vect-grid-ksarow {
+.lea-vect-grid-ksarow {
     padding-top: 30px;
     padding-bottom: 30px;
 }
