--- a/vector.css
+++ b/vector.css
@@ -374,7 +374,7 @@
     margin: 20px 0;
 }
 
-.lea-vect-read-required {
+.lea-vect-completed {
     font-size: 150%;
     border-radius: 10px;
     border: 2px solid #ee2147;
