--- a/vector.css
+++ b/vector.css
@@ -376,11 +376,11 @@
 
 .lea-vect-completed {
     font-size: 150%;
-    border-radius: 10px;
-    border: 2px solid #ee2147;
-    background-color: #002147;
+    border-radius: 5px;
+    border: 2px solid var(--lea-vect-oxford-blue);
+    background-color: var(--lea-vect-pale-blue);
     margin: 0 0 30px 0;
-    color: #ff4f5fdd;
+    color: var(--lea-vect-oxford-blue);
     padding: 10px;
     letter-spacing: 1.5px;
     font-weight: 600;
