--- a/vector.css
+++ b/vector.css
@@ -144,7 +144,7 @@
     height: 33.33%;
 }
 
-.lea-grid-rowof4 {
+.lea-vect-grid-rowof4 {
     height: 25%;
     align-items: center;
     display: flex;
