--- a/vector.css
+++ b/vector.css
@@ -128,8 +128,8 @@
 }
 
 .lea-vect-grid-footer, .lea-vect-grid-title {
-    background-color: var(--lea-vect-blue);
-    color: var(--lea-vect-white);
+    background-color: var(--lea-vect-engine-grey);
+    color: var(--lea-vect-oxford-blue);
     margin: 0;
     font-weight: 900;
 }
