--- a/vector.css
+++ b/vector.css
@@ -298,11 +298,13 @@
 .lea-vect-waypoint-box {
     text-align: center;
     margin: 0 20px 0 0;
+    background-color: linear-gradient(var(--lea-vect-oxford-blue), rgba(var(--lea-vect-oxford-blue-rgb),0));
 
 }
 
 .lea-vect-waypoint-box i {
     margin: auto;
+    color: var(--lea-vect-white);
 }
 
 .lea-vect-waypoint-box p {
