--- a/vector.css
+++ b/vector.css
@@ -300,6 +300,7 @@
     margin: 0 20px 0 0;
     background-image: linear-gradient(to right,var(--lea-vect-oxford-blue), rgba(var(--lea-vect-oxford-blue-rgb),0));
     border-radius: 5px;
+    padding: 10px;
 }
 
 .lea-vect-waypoint-box i {
@@ -444,8 +445,7 @@
 .lea-vect-completed {
     font-size: 150%;
     border-radius: 5px;
-    border: 2px solid var(--lea-vect-oxford-blue);
-    background-color: var(--lea-vect-pale-blue);
+     background-color: var(--lea-vect-pale-blue);
     margin: 0 0 30px 0;
     color: var(--lea-vect-oxford-blue);
     padding: 0px;
