--- a/vector.css
+++ b/vector.css
@@ -267,6 +267,28 @@
     border-radius: 5px;
 }
 
+.lea-vect-progresstesthead {
+    font-size: 120%;
+    padding: 20px;
+    color: #fff;
+    background-image: linear-gradient(to right, #003157ff,#003157dd,#00315700 );
+    letter-spacing: 2px;
+    font-weight: 700;
+    border-radius: 5px;
+    margin: 10px 0;
+}
+
+.lea-vect-progresstestbground {
+    background-size: cover;
+    margin: 20px 0 0 0;
+    border-radius: 5px;
+    background-image: url('https://stephenjclarke.github.io/leadingedgevle/images/iPad_Reading.jpg');
+    background-repeat: no-repeat;
+    padding: 0px;
+    background-size: fit;
+    background-position: right;
+    border-radius: 5px;
+}
 .lea-vect-modulehead {
     font-size: 180%;
     padding: 20px;
