--- a/vector.css
+++ b/vector.css
@@ -255,6 +255,16 @@
     margin: 10px 0;
 }
 
+.lea-vect-readinghead h2 {
+    font-size: 120%;
+    color: #fff;
+    }
+
+    .lea-vect-readinghead p {
+        font-size: 100%;
+        color: #fff;
+        }
+
 .lea-vect-readingbground {
     background-size: cover;
     margin: 20px 0 0 0;
