--- a/vector.css
+++ b/vector.css
@@ -255,12 +255,12 @@
     margin: 10px 0;
 }
 
-.lea-vect-readinghead h2 {
+.lea-vect-readinghead h2, .lea-vect-progresstest h2 {
     font-size: 120%;
     color: #fff;
     }
 
-    .lea-vect-readinghead p {
+    .lea-vect-readinghead p, .lea-vect-progresstest p {
         font-size: 100%;
         color: #fff;
         }
