--- a/vector.css
+++ b/vector.css
@@ -262,7 +262,7 @@
 }
 
 .lea-vect-fa-progress {
-    color: var(--lea-vect-pale-blue);
+    color: var(--lea-vect-sky-blue);
 }
 
 .lea-vect-readinghead p, .lea-vect-progresstesthead p {
