--- a/vector.css
+++ b/vector.css
@@ -348,10 +348,19 @@
 }
 
 .lea-vect-waypoint-box p {
-    font-size: 0.7vmin;
+    font-size: 0.8vmin;
     text-shadow:var(--lea-vect-engine-grey);
     letter-spacing: 0px;
     color: var(--lea-vect-white);
+    
+}
+
+.lea-vect-waypoint-box h3 {
+    font-size: 1vmin;
+    text-shadow:var(--lea-vect-engine-grey);
+    letter-spacing: 0px;
+    color: var(--lea-vect-white);
+    margin: 0;
     
 }
 
