--- a/vector.css
+++ b/vector.css
@@ -366,6 +366,33 @@
     
 }
 
+.lea-vect-waypoint-hours {
+    text-align: center;
+    margin: 0 20px 0 0;
+    background-image: linear-gradient(to right,var(--lea-vect-oxford-blue), rgba(var(--lea-vect-oxford-blue-rgb),0));
+    border-radius: 5px;
+    padding: 10px 0;
+}
+
+.lea-vect-waypoint-box p {
+    font-size: 0.8vmin;
+    text-shadow:var(--lea-vect-engine-grey);
+    letter-spacing: 0px;
+    color: var(--lea-vect-white);
+    margin: 0;
+    padding: 0;
+    
+}
+
+.lea-vect-waypoint-box h2 {
+    font-size: 2vmin;
+    text-shadow:var(--lea-vect-engine-grey);
+    letter-spacing: 1px;
+    color: var(--lea-vect-white);
+    margin: 0;
+    
+}
+
 
 
 .lea-vect-unithead-left,  .lea-vect-unithead-right{
