--- a/vector.css
+++ b/vector.css
@@ -348,40 +348,36 @@
 }
 
 .lea-vect-waypoint-box p {
-    font-size: 0.8vmin;
-    text-shadow:var(--lea-vect-engine-grey);
+    font-size: 1.1vmin;
     letter-spacing: 0px;
     color: var(--lea-vect-white);
     margin: 0;
     padding: 0;
+    text-align: center;
     
 }
 
 .lea-vect-waypoint-box h3 {
     font-size: 2vmin;
-    text-shadow:var(--lea-vect-engine-grey);
     letter-spacing: 1px;
     color: var(--lea-vect-white);
-    margin: 0;
-    
+    margin: 0;  
 }
 
 .lea-vect-waypoint-hours {
     text-align: center;
     margin: 0 20px 0 0;
-    background-image: linear-gradient(to right,var(--lea-vect-oxford-blue), rgba(var(--lea-vect-oxford-blue-rgb),0));
-    border-radius: 5px;
     padding: 10px 0;
 }
 
 .lea-vect-waypoint-hours p {
-    font-size: 0.8vmin;
+    font-size: 1.2vmin;
     text-shadow:var(--lea-vect-engine-grey);
     letter-spacing: 0px;
     color: var(--lea-vect-white);
     margin: 0;
     padding: 0;
-    
+    text-align: center;
 }
 
 .lea-vect-waypoint-hours h2 {
