--- a/vector.css
+++ b/vector.css
@@ -336,7 +336,7 @@
 
 .lea-vect-waypoint-box {
     text-align: center;
-    margin: 0 20px 0 0;
+    margin: auto 10px auto 0;
     background-image: linear-gradient(to right,var(--lea-vect-oxford-blue), rgba(var(--lea-vect-oxford-blue-rgb),0));
     border-radius: 5px;
     padding: 10px 0;
@@ -383,7 +383,7 @@
     font-size: 2.5vmin;
     letter-spacing: 1px;
     color: var(--lea-vect-royal-blue);
-    margin: 10px 0;
+    margin: 0;
     
 }
 
