--- a/vector.css
+++ b/vector.css
@@ -526,6 +526,7 @@
 .lea-vect-completed-text {
        padding: 10px;
        font-size: 130%;
+       margin: auto 0;
     }
 
 .lea-vect-head-checklist {
