--- a/vector.css
+++ b/vector.css
@@ -524,7 +524,7 @@
 
 .lea-vect-completed-text {
        padding: 10px;
-       font-size: 130%;
+       font-size: 1vw;
        margin: auto 0;
     }
 
