--- a/vector.css
+++ b/vector.css
@@ -486,7 +486,7 @@
 .lea-vect-head-centre-bground {
     background-image: url('https://leadingedgeaviation.com/wp-content/uploads/LEA-PCL-Prize-3.jpg');
     background-repeat: no-repeat;
-    margin: 0;
+    margin: 0 1px 0 0;
     background-size: cover;
 }
 
