--- a/vector.css
+++ b/vector.css
@@ -380,7 +380,7 @@
 .lea-vect-waypoint-hours p {
     font-size: 1.2vmin;
     letter-spacing: 0px;
-    color: var(--lea-vect-royal-blue);
+    color: var(--lea-vect-oxford-blue);
     margin: 0;
     padding: 0;
     text-align: center;
@@ -389,7 +389,7 @@
 .lea-vect-waypoint-hours h2 {
     font-size: 2.5vmin;
     letter-spacing: 1px;
-    color: var(--lea-vect-royal-blue);
+    color: var(--lea-vect-oxford-blue);
     margin: 0;
     
 }
@@ -514,9 +514,9 @@
 }
 
 .lea-vect-vimeo {
-    padding:56.25% 0 0 0;
+    padding:30% 0 0 0;
     position:relative;
-    background-color: var(--vect-lea-royal-blue);
+    background-color: var(--vect-lea-oxford-blue);
 }
 
 .lea-vect-vimeo iframe {
@@ -524,7 +524,7 @@
     top:0;
     left:20%;
     width:60%;
-    height:60%;
+    height:90%;
 }
 
 
@@ -557,7 +557,7 @@
 .lea-vect-head-checklist {
     font-size: 150%;
     border-radius: 10px;
-    background-color: #002147;
+    background-color: var(--lea-vect-oxford-blue);
     margin: 0 0 30px 0;
     color: #fff;
     padding: 10px;
