--- a/vector.css
+++ b/vector.css
@@ -516,7 +516,7 @@
 .lea-vect-vimeo {
     padding:30% 0 0 0;
     position:relative;
-    background-color: var(--vect-lea-oxford-blue);
+    background-color: var(--lea-vect-oxford-blue);
 }
 
 .lea-vect-vimeo iframe {
