--- a/vector.css
+++ b/vector.css
@@ -479,7 +479,7 @@
 .lea-vect-head-centre-01 {
     font-size: 20pt;
     padding: 30px;
-    border-radius: 5px 5px 0 0;
+
     text-align: center;
     color: #fff;
     background-image: linear-gradient(to top, rgba(var(--lea-vect-oxford-blue-rgb),1), rgba(var(--lea-vect-oxford-blue-rgb),0));
@@ -491,8 +491,13 @@
 .lea-vect-head-centre-bground {
     background-image: url('https://leadingedgeaviation.com/wp-content/uploads/LEA-PCL-Prize-3.jpg');
     background-repeat: no-repeat;
-    margin: 0 0px 0 0;
+
     background-size: cover;
+    border-radius: 5px 5px 0 0;
+}
+
+.lea-vect-head-centre-01, .lea-vect-head-centre-bground {
+    margin: 20px 0px 0 0;
 }
 
 
