--- a/vector.css
+++ b/vector.css
@@ -546,7 +546,7 @@
     font-size: 0.9vw;
     border-radius: 5px;
      background-color: var(--lea-vect-pale-blue);
-    margin: 0 0 30px 0;
+    margin: 30px 0 30px 0;
     color: var(--lea-vect-oxford-blue);
     padding: 0px;
     font-weight: 600;
