--- a/vector.css
+++ b/vector.css
@@ -668,7 +668,7 @@
     padding-bottom: 30px;
 }
 
-lea-vect-studyplan {
+.lea-vect-studyplan {
     font-size: 120%;
     background-color: var(--lea-vect-oxford-blue);
 }
