--- a/vector.css
+++ b/vector.css
@@ -671,7 +671,7 @@
 .lea-vect-studyplan {
     font-size: 120%;
     background-color: var(--lea-vect-engine-grey);
-    margin: 3px solid var(--lea-vect-oxford-blue)
+    margin: 3px solid var(--lea-vect-oxford-blue);
 }
 /* End of LEA Moodle CS*/
 
