--- a/vector.css
+++ b/vector.css
@@ -672,6 +672,8 @@
     font-size: 120%;
     background-color: var(--lea-vect-engine-grey);
     margin: 3px solid var(--lea-vect-oxford-blue);
+    padding: 20px;
+    margin: 5px;
 }
 /* End of LEA Moodle CS*/
 
