--- a/vector.css
+++ b/vector.css
@@ -692,7 +692,9 @@
 }
 
 .lea-vect-studyplan p b {
-    font-size: 150%;
+    font-size: 140%;
+    color: var(--lea-vect-oxford-blue);
+    text-align: center;
     }
 /* End of LEA Moodle CS*/
 
