--- a/vector.css
+++ b/vector.css
@@ -18,7 +18,7 @@ title {
     display: none;
 }
 
-/* Vector Standard Bootstrap Style Layour */
+/* Vector Standard Bootstrap Style Layout */
 
 .lea-vect-row {
     width: 100%;
@@ -443,6 +443,16 @@ title {
     border-radius: 5px;
 }
 
+
+.lea-vect-schoolfinalhead {
+    padding: 10px;
+    background-color: var(--lea-vect-pale-blue);
+    font-size: 130%;
+    color: var(--lea-vect-oxford-blue);
+    border-radius: 5px;
+    margin: 20px 0;
+    border: 2px solid var(--lea-vect-oxford-blue);
+}
 
 .lea-vect-testhead {
     padding: 10px;
