--- a/vector.css
+++ b/vector.css
@@ -451,7 +451,7 @@ title {
     color: var(--lea-vect-oxford-blue);
     border-radius: 5px;
     margin: 20px 0;
-    border: 5px inset rgba(var(--lea-vect-oxford-blue-rgb),0.2);
+    border: 5px inset var(--lea-vect-pale-blue-rgb);
 }
 
 .lea-vect-schoolfinalhead ul {
