--- a/vector.css
+++ b/vector.css
@@ -33,6 +33,10 @@ title {
     width: 8.333333%;
 }
 
+.lea-vect-booksapp {
+    background-color: #ffffff00;
+}
+
 .lea-vect-col-2 {
     width: 16.66666%;
 }
