--- a/vector.css
+++ b/vector.css
@@ -34,7 +34,7 @@ title {
 }
 
 .lea-vect-booksapp {
-    background-color: #ffffff00;
+    background-color: var(--lea-vect-engine-grey);
 }
 
 .lea-vect-col-2 {
