--- a/vector.css
+++ b/vector.css
@@ -39,6 +39,7 @@ title {
     border-radius: 5px 0 0 5px;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .lea-vect-booksapp img {
