--- a/vector.css
+++ b/vector.css
@@ -43,6 +43,10 @@ title {
     margin: 5px 0 5px 30px;
     font-weight: 400;
 }
+.lea-vect-padpilot-instructions li a{
+    font-weight: 900;
+    color: var(--lea-vect-sky-blue)
+}
 
 .lea-vect-booksapp {
     background-color: var(--lea-vect-engine-grey);
