--- a/vector.css
+++ b/vector.css
@@ -541,7 +541,7 @@ title {
     background-color: #00214722;
     margin: 0;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
 }
 
