--- a/vector.css
+++ b/vector.css
@@ -772,7 +772,7 @@ title {
 }
 
 .lea-copybox {
-    background-color: #bacded;
+    background-color: #efefef;
     font-weight: 800;
     margin: 10px;
     padding:20px;
