--- a/vector.css
+++ b/vector.css
@@ -773,10 +773,11 @@ title {
 
 .lea-copybox {
     background-color: #efefef;
-    font-weight: 800;
+    font-weight: 400;
     margin: 10px;
     padding:20px;
     border: double black 2px;
+    font-size: 70%;
 }
 
 
