--- a/vector.css
+++ b/vector.css
@@ -793,7 +793,7 @@ title {
 
 .lea-instr-settings {
     margin: 20px 0 20px 0;
-    background-color: #efefef;
+    background-color: #ccc;
 }
 
 /* End of LEA Moodle CS*/
