--- a/vector.css
+++ b/vector.css
@@ -429,6 +429,13 @@ title {
     margin: 1px;  
 }
 
+.lea-vect-waypoint-box h5 {
+    font-size: 60%;
+    letter-spacing: 1px;
+    color: var(--lea-vect-white);
+    margin: 1px;  
+}
+
 .lea-vect-waypoint-hours {
     text-align: center;
     margin: auto 20px auto 0;
