--- a/vector.css
+++ b/vector.css
@@ -807,9 +807,9 @@ title {
 
 .lea-divider {
     font-weight: 900;
-    font-size: 150%;
+    font-size: 200%;
     margin: 10px 0 30px 0;
-    border: 3px efefef dashed;
+    border: 3px #555 dashed;
 }
 
 .lea-instr-settings {
